<resources>
    <string name="app_name">Serving Size Calculator</string>
    <string name="select_a_pot_to_use">Select a pot to use:</string>
    <string name="add_pot">ADD POT</string>
    <string name="pot_name">Pot Name:</string>
    <string name="pot_weight_g">Pot Weight (g):</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="txt_pot_name">Pot name</string>
    <string name="txt_pot_weight_g">Pot weight (g)</string>
    <string name="pot">Pot</string>
    <string name="weight_empty_g">Weight Empty (g)</string>
    <string name="servings"># Servings</string>
    <string name="number_of_servings">Number of servings</string>
    <string name="serving_weight">Serving Weight</string>
    <string name="back">BACK</string>
    <string name="weight_of_food_g">Weight of food (g)</string>
    <string name="weight_with_food_g">Weight with food (g)</string>
    <string name="hint_weight_with_food_g">Weight with food (g)</string>
    <string name="pot_icons">Pot Icons</string>
    <string name="delete_pot">Delete Pot</string>
    <string name="save_pots">Save Pots</string>
    <string name="action_bar_add_pot">ADD POT</string>
    <string name="act_Bar_Back">BACK</string>
    <string name="act_bar_ok">OK</string>
    <string name="act_Bar_Cancel">Cancel</string>
    <string name="delete_pot_long_press_pot_for_delete_button">Delete Pot - Long press pot for delete button</string>
    <string name="error_checking_input">Error Checking Input</string>
    <string name="edit_pot_long_press_on_pot">Edit Pot- Long Press on Pot</string>
    <string name="action_bar_buttons">Action Bar Buttons</string>
    <string name="save_data_press_save_pots_to_save">Save Data- Press Save Pots to save</string>
</resources>
